# mass-spectrometry-traits

./: .gitignore  Cargo.toml  GEMS_INDEX_DIAGNOSTIC_RUN.md  README.md  prek.toml
.github/workflows/: ci.yml
benches/: bench_matchms.py  entropy_similarity.rs  exact_cosine.rs  greedy_cosine.rs  hungarian_cosine.rs  index_construction.rs  index_search.rs  index_top_k_large.rs  linear_cosine.rs  modified_cosine.rs  modified_greedy_cosine.rs  modified_hungarian_cosine.rs  modified_linear_cosine.rs  pairwise_linear_cosine_graph.rs  splash.rs
benches/common/: mod.rs
docs/: flash-cosine-index-improvement-plan.md
fuzz/: Cargo.toml  README.md  fuzz-all.sh
fuzz/fuzz_targets/: flash_cosine.rs  flash_entropy.rs  hungarian_cosine.rs  linear_entropy.rs  modified_hungarian_cosine.rs  modified_linear_entropy.rs  ms_entropy_clean_spectrum.rs
src/: fuzzing.rs  lib.rs  numeric_validation.rs  structs.rs  traits.rs
src/structs/: cosine_common.rs  entropy_common.rs  entropy_similarity.rs  exact_cosine.rs  flash_common.rs  flash_cosine_index.rs  flash_entropy_index.rs  generic_spectrum.rs  greedy_cosine.rs  hungarian_cosine.rs  hungarian_entropy.rs  linear_cosine.rs  linear_entropy.rs  merge_close_peaks.rs  modified_cosine.rs  modified_greedy_cosine.rs  modified_hungarian_cosine.rs  modified_hungarian_entropy.rs  modified_linear_cosine.rs  modified_linear_entropy.rs  ms_entropy_clean_spectrum.rs  similarity_errors.rs  sirius_merge_close_peaks.rs  splash.rs
src/structs/iterators/: shared_peaks.rs
src/traits/: reference_spectra.rs  spectra.rs  spectra_index.rs  spectra_index_builder.rs  spectral_pipeline.rs  spectral_pipeline_builder.rs  spectral_similarity.rs  spectrum.rs  spectrum_annotation.rs  spectrum_mut.rs
src/traits/reference_spectra/: acephate.rs  acetyl_coenzyme_a.rs  adenine.rs  adenosine.rs  adenosine_5_diphosphate.rs  adenosine_5_monophosphate.rs  alanine.rs  arachidic_acid.rs  arachidonic_acid.rs  arginine.rs  ascorbic_acid.rs  aspartic_acid.rs  aspirin.rs  avermectin.rs  biotin.rs  boscalid.rs  chlorantraniliprole.rs  chlorfluazuron.rs  chlorotoluron.rs  citric_acid.rs  clothianidin.rs  cocaine.rs  cyazofamid.rs  cymoxanil.rs  cysteine.rs  cytidine.rs  cytidine_5_diphosphate.rs  cytidine_5_triphosphate.rs  desmosterol.rs  diflubenzuron.rs  dihydrosphingosine.rs  diniconazole.rs  dinotefuran.rs  diuron.rs  doramectin.rs  elaidic_acid.rs  epimeloscine.rs  eprinomectin.rs  ethiprole.rs  ethirimol.rs  (+41 more)
tests/: test_count.rs  test_crouse_epsilon_regression.rs  test_diagnose.rs  test_edge_count.rs  test_entropy_similarity.rs  test_entropy_variants.rs  test_error_surfaces.rs  test_exact_cosine.rs  test_flash_cosine.rs  test_flash_cosine_fuzz_harness.rs  test_flash_entropy.rs  test_flash_entropy_fuzz_harness.rs  test_generic_spectrum_arbitrary.rs  test_greedy_cosine.rs  test_hungarian_cosine.rs  test_hungarian_cosine_fuzz_harness.rs  test_large_spectra.rs  test_linear_cosine.rs  test_linear_entropy_fuzz_harness.rs  test_matching_input_validation.rs  test_matchms_validation.rs  test_merge_close_peaks.rs  test_modified_cosine.rs  test_modified_cosine_benchmark_regression.rs  test_modified_cosine_validation.rs  test_modified_greedy_cosine.rs  test_modified_hungarian_cosine.rs  test_modified_hungarian_cosine_fuzz_harness.rs  test_modified_hungarian_cosine_validation.rs  test_modified_linear_cosine.rs  test_modified_linear_entropy_fuzz_harness.rs  test_ms_entropy_clean_spectrum.rs  test_ms_entropy_clean_spectrum_fuzz_harness.rs  test_ms_entropy_clean_spectrum_validation.rs  test_ms_entropy_validation.rs  test_random_spectrum_alloc.rs  test_reference_spectra_fallible.rs  test_shared_peaks.rs  test_similarity_config.rs  test_similarity_properties.rs  (+8 more)
tests/fixtures/: expected_cleaned_spectra.csv  expected_entropy_similarities.csv  expected_modified_cosine_similarities.csv  expected_similarities.csv  generate_expected_entropy_similarities.py  splash_reference.csv.zst
tests/fixtures/benchmark_spectra/: 207.txt  376.txt  387.txt  390.txt  397.txt  406.txt  409.txt  425.txt
tests/fixtures/fuzz/flash_cosine/crashes/: crash-29a94b706036c65f2e4126dd28fa133857eb6142
tests/fixtures/fuzz/flash_entropy/crashes/: crash-f4881ae141a3134f93bec37fc5172a1c670b36ad
tests/fixtures/fuzz/hungarian_cosine/crashes/: crash-2c1a2d0825221e268820f8aabeaed4ab36d16656  crash-629f1e62b1ef56a2c0ed7ff88ebc8e5f9d681c38  crash-6946d349e7852d93a1a73e8f74115a0ef0a47612  crash-fb7ca7881a8fe69a011616a0f3807a347cc94815
tests/fixtures/fuzz/linear_entropy/crashes/: crash-d4cea8e2b102bab34a50e7cee87718c24059b7c1  minimized-from-1b5f8cb8a4bc892491d764fdda26b46e179fe5a8  minimized-from-33b7ea646d893cb8e152d98ab38ae6ea4509ccb6  minimized-from-7bdbed29afe27bf2db93b14b7ce098df7f1cbfd3  minimized-from-d4cea8e2b102bab34a50e7cee87718c24059b7c1  minimized-from-e6ef8c9e7da509f14b67482d968ca0d4e7a4f49e
tests/fixtures/fuzz/modified_hungarian_cosine/crashes/: crash-02954fa24b0ebca8e37585c57afef58282e1f13c  crash-101fe5d4a21535d4806a0151a68b4d6e379175d0  crash-1773ff1aded0f7dc411532fc7d06a2df273802cd  crash-1b33fe16dc2c41b49f89a231bd2560fafeea3c10  crash-28e5be0b5cb24174fb7e2468b55b9a005c61166c  crash-47fd26f5c14c7f981363b00d9d0503ddb4d821a2  crash-4b4ceed63e864c19657d45abfd8808b27990915d  crash-5d78fb309533388b34813940f401d68eeba8007b  crash-6093b7c015cbb52d8eb0a005f06a488328916c7c  crash-702495a5660bb619d6951ff1996f5c4c4ec7fecd  crash-7813c6d465d2c1db4917736a89aeb82aab1cd9f4  crash-7944ec5378e82ade014a473f1c80725744c9a900  crash-7e54c42702410f497b7629d350ab28ba0c7fa244  crash-8f2be73373bdbc33ada33e9187cca2adb5e4b351  crash-91f2f600c9158aba4a4b67afad786bc7af734a55  crash-ba196d3e2c9efb425dd74bdbd346d067aebd35c7  crash-cc4028c31d9ca4713e75bbe7043dd8e23019cce4  crash-e26b0df8b683188123b758185289d2bc434f3739  (+1 more)
tests/support/: mod.rs  progress.rs  spectrum_factory.rs
(+11 files in other folders)
