[package]
name = "mass_spectrometry"
version = "0.1.0"
edition = "2024"

[dependencies]
geometric-traits = { path = "../geometric-traits", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2", default-features = false }
multi_ranged = { version = "0.1.1", default-features = false }
thiserror = { version = "2", default-features = false }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.6"
csv = "1"

[[bench]]
name = "hungarian_cosine"
harness = false

[[bench]]
name = "entropy_similarity"
harness = false

[[bench]]
name = "modified_hungarian_cosine"
harness = false
