[package]
name = "mass_spectrometry"
version = "0.1.0"
edition = "2024"

[features]
default = []
proptest = ["dep:proptest"]

[dependencies]
geometric-traits = { git = "https://github.com/earth-metabolome-initiative/geometric-traits", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2", default-features = false }
multi_ranged = { version = "0.1.1", default-features = false }
bitvec = { version = "1", default-features = false, features = ["alloc"] }
thiserror = { version = "2", default-features = false }
proptest = { version = "1.6", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.6"
csv = "1"

[[bench]]
name = "hungarian_cosine"
harness = false

[[bench]]
name = "entropy_similarity"
harness = false

[[bench]]
name = "modified_hungarian_cosine"
harness = false

[[bench]]
name = "greedy_cosine"
harness = false

[[bench]]
name = "modified_greedy_cosine"
harness = false

[[bench]]
name = "linear_cosine"
harness = false

[[bench]]
name = "modified_linear_cosine"
harness = false

[[bench]]
name = "index_search"
harness = false
